@@ -1,6 +1,6 @@
 Package: HDoutliers
-Version: 0.14
-Date: 2016-11-27
+Version: 0.15
+Date: 2016-12-23
 Title: Leland Wilkinson's Algorithm for Detecting Multidimensional
         Outliers
 Authors@R: c(person("Chris", "Fraley", role = c("aut", "cre"),
@@ -10,12 +10,12 @@ Authors@R: c(person("Chris", "Fraley", role = c("aut", "cre"),
 Author: Chris Fraley [aut, cre],
   Leland Wilkinson [ctb]
 Maintainer: Chris Fraley  <cfraley@tableau.com>
-Depends: R (>= 3.1.0), FNN, FactoMineR
+Depends: R (>= 3.1.0), FNN, FactoMineR, mclust
 Description: An implementation of an algorithm for outlier detection that can handle a) data with a mixed categorical and continuous variables, b) many columns of data, c) many rows of data, d) outliers that mask other outliers, and e) both unidimensional and multidimensional datasets. Unlike ad hoc methods found in many machine learning papers, HDoutliers is based on a distributional model that uses probabilities to determine outliers. See <https://www.cs.uic.edu/~wilkinson/Publications/outliers.pdf>.
 License: MIT + file LICENSE
 URL: https://www.r-project.org,
         https://www.cs.uic.edu/~wilkinson/Publications/outliers.pdf
 NeedsCompilation: no
-Packaged: 2016-11-28 15:57:14 UTC; cfraley
+Packaged: 2016-12-23 19:48:17 UTC; cfraley
 Repository: CRAN
-Date/Publication: 2016-11-28 22:13:28
+Date/Publication: 2016-12-24 11:23:58
