@@ -1,10 +1,10 @@
-7052f125d96be71e6567c8a92b869e49 *CHANGELOG
-200fede269b16ebfde134078eb2901e6 *DESCRIPTION
+ff97f5efb0259ea086c59f8e62c0eff3 *CHANGELOG
+517615ad3bde878aaf668262269e47ab *DESCRIPTION
 b8744178270b0cb2dcbe8feb57543eac *LICENSE
-f02ae201534df70cb843a43b7ee0316d *NAMESPACE
+0be8f3a8cc7ad4d52dfefc821b14605e *NAMESPACE
 ed462981daf8373c9245b31abed94478 *R/HDoutliers.R
-0472ba6c3ccdceec2d9adf210f35f94f *R/getHDmembers.R
-840363a2a952be5d1e5a0cc536f6b23d *R/getHDoutliers.R
+5a775324becc5ab2dcb3e9abc13559b4 *R/getHDmembers.R
+40d1f71931a4d239a988420b6376cea6 *R/getHDoutliers.R
 d95d51e420b6114eaca75354e6c4ba9d *R/plotHDoutliers.R
 d3ac0d870ae76c65a64aae0b3c566d5e *data/dots.rda
 9e467fdd8b9a2d2186d889f42e91c56a *data/ex2D.rda
