@@ -1,4 +1,6 @@
-11/21/2016: updated DESCRIPTION file to properly credit R package authorship
+12/23/2016: corrected to handle duplicate rows when n <= maxrows [Antony Unwin]
+           (uses function partuniq from mclust)
+11/27/2016: updated DESCRIPTION file to properly credit R package authorship
 11/16/2016: added URL for tech report to DESCRIPTION (also in inst/doc)
 11/15/2016: updated outlier bound code to conform to latest Java version
 10/31/2016: fixed typo in plotHDoutliers (affected 1D plots)
